--- a/src/components/Quiz/Quiz.css
+++ b/src/components/Quiz/Quiz.css
@@ -160,8 +160,8 @@
 @media (max-width:500px),(max-height:800){
     .index{
         right: 7%;
-        top: 15%;
-        font-size: 20px;
+        top: 18%;
+        font-size: 17px;
         border: 4px solid rgb(198, 178, 24);
     }
     .timer-section{
@@ -182,15 +182,12 @@
         padding-left:40px 
     }
     .result-container .reset-btn{
-        margin-top: 3rem;
-    }
-    .container ul li{
         margin-top: 2rem;
     }
-    .container button{
-        margin-top: 3rem;
+    .container ul li{
+        width:300px;
     }
     .container .active-btn{
-        margin-top: 3rem;
+        margin-top: 1rem;
     }
 }
