--- a/src/components/Quiz/Quiz.css
+++ b/src/components/Quiz/Quiz.css
@@ -170,19 +170,22 @@
     }
     .container h1{
         font-size: 20px;
-        margin-top: 4rem;
+        margin-top: 3rem;
     }
     .container h2{
         margin-top: 50px;
         font-size: 50px;
         line-height: 30px;
     }
+    .result-container h2{    
+        font-size: 2.5rem;
+    }
     .container .question{
         font-size: 20px;
         padding-left:40px 
     }
     .result-container .reset-btn{
-        margin-top: 2rem;
+        margin-top: 1rem;
     }
     .container ul li{
         width:300px;
